--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                <i class="fas fa-bars"></i>
                <h5>Web Devlopment</h5>
                <div class="pra">
-                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, ipsam debitis. Asperiores doloribus consectetur eum a maxime vel error impedit deleniti laudantium exercitationem delectus saepe assumenda aspernatur qui ex quidem, commodi amet obcaecati sint illo nobis. Suscipit officiis harum rem molestias quasi repellat placeat ad eaque, quisquam aliquid exercitationem cumque eos atque id in illo provident laboriosam itaque excepturi vel quod rerum distinctio! Unde voluptates, sit dolorum libero saepe porro quod, ex quas illo, corporis expedita! Aut obcaecati dolor corrupti, maiores incidunt illum libero ipsam, voluptates corporis, dolorum laudantium reprehenderit. Minus illum doloremque laborum dolor cumque quo, quod explicabo in!</p>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores tenetur sequi nobis reprehenderit non nemo ab, rerum sunt impedit eaque debitis corrupti.</p>
                     <p style="text-align: center;">
                         <a class="button" href="#">Read More</a>
                     </p>
@@ -77,7 +77,7 @@
             <i class="far fa-user"></i>
             <h5>Web Devlopment</h5>
             <div class="pra">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, ipsam debitis. Asperiores doloribus consectetur eum a maxime vel error impedit deleniti laudantium exercitationem delectus saepe assumenda aspernatur qui ex quidem, commodi amet obcaecati sint illo nobis. Suscipit officiis harum rem molestias quasi repellat placeat ad eaque, quisquam aliquid exercitationem cumque eos atque id in illo provident laboriosam itaque excepturi vel quod rerum distinctio! Unde voluptates, sit dolorum libero saepe porro quod, ex quas illo, corporis expedita! Aut obcaecati dolor corrupti, maiores incidunt illum libero ipsam, voluptates corporis, dolorum laudantium reprehenderit. Minus illum doloremque laborum dolor cumque quo, quod explicabo in!</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed doloribus inventore perspiciatis unde, corporis cum eius! Eos at odit laborum!</p>
                  <p style="text-align: center;">
                      <a class="button" href="#">Read More</a>
                  </p>
@@ -87,7 +87,7 @@
             <i class="far fa-bell"></i>
             <h5>Web Devlopment</h5>
             <div class="pra">
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid, ipsam debitis. Asperiores doloribus consectetur eum a maxime vel error impedit deleniti laudantium exercitationem delectus saepe assumenda aspernatur qui ex quidem, commodi amet obcaecati sint illo nobis. Suscipit officiis harum rem molestias quasi repellat placeat ad eaque, quisquam aliquid exercitationem cumque eos atque id in illo provident laboriosam itaque excepturi vel quod rerum distinctio! Unde voluptates, sit dolorum libero saepe porro quod, ex quas illo, corporis expedita! Aut obcaecati dolor corrupti, maiores incidunt illum libero ipsam, voluptates corporis, dolorum laudantium reprehenderit. Minus illum doloremque laborum dolor cumque quo, quod explicabo in!</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi in sint animi saepe. Nesciunt voluptatem exercitationem iure, excepturi enim incidunt.</p>
                  <p style="text-align: center;">
                      <a class="button" href="#">Read More</a>
                  </p>
@@ -96,6 +96,23 @@
        </div>
 
    </div>
+   <!-----------Contact Me--------->
+   <div class="contact-me">
+       <p>Let Me Get You A Beautiful Website.</p>
+       <a class="button-two" href="#">Hire Me</a>
+   </div>
+
+   <!------------footer start----------->
+   <footer>
+       <p>Khaled Eabne Delowar</p>
+       <p>For more HTML,CSS, and coding tutorial -please click on the link below to subscribe to my channel:</p>
+       <div class="social">
+           <a href="#"><i class="fab fa-facebook-f"></i></a>
+           <a href="#"><i class="fab fa-instagram"></i></a>
+           <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+       </div>
+       <p class="end">CopyRight By Khaled Eabne Delowar</p>
+   </footer>
 
 </body>
 </html>
