--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
            </div>
            <div class="card">
             <i class="far fa-user"></i>
-            <h5>Web Devlopment</h5>
+            <h5>Web Design</h5>
             <div class="pra">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed doloribus inventore perspiciatis unde, corporis cum eius! Eos at odit laborum!</p>
                  <p style="text-align: center;">
@@ -85,7 +85,7 @@
         </div>
         <div class="card">
             <i class="far fa-bell"></i>
-            <h5>Web Devlopment</h5>
+            <h5>Mobile App</h5>
             <div class="pra">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi in sint animi saepe. Nesciunt voluptatem exercitationem iure, excepturi enim incidunt.</p>
                  <p style="text-align: center;">
